# MAEVNSVOCALPIPELINE

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  AUDACITY_INTEGRATION.md  AUDIT_REPORT.md  BUILD_RELEASE_SUMMARY.md  CMakeLists.txt  DEVELOPER_GUIDE.md  DOWNLOAD_AND_INSTALL.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  build_maevn_onnx.bat  setup_maevn_repo.bat  setup_maevn_repo.sh  structure
.github/workflows/: build-and-release.yml  generate-audio-samples.yml
Models/: config.json
Models/drums/: 808_ddsp.onnx  hihat_ddsp.onnx  snare_ddsp.onnx
Models/instruments/: piano_ddsp.onnx  synth_fm.onnx
Models/vocals/: README.md  vocals_hifigan.onnx  vocals_tts.onnx
Presets/: CinematicVocals.json  Dirty808.json  RadioVocals.json  WideHats.json
Resources/: README.md
Source/: AIFXEngine.cpp  AIFXEngine.h  CinematicAudioEnhancer.cpp  CinematicAudioEnhancer.h  DAWAutomation.cpp  DAWAutomation.h  DSPModules.h  DragDropExport.cpp  DragDropExport.h  FXPreset.cpp  FXPreset.h  FXPresetManager.cpp  FXPresetManager.h  GPUAcceleration.cpp  GPUAcceleration.h  GlobalUndoManager.cpp  GlobalUndoManager.h  InstrumentSequencer.cpp  InstrumentSequencer.h  LegendaryProducerFXSuiteUltimate.cpp  LegendaryProducerFXSuiteUltimate.h  LoopRegionSync.cpp  LoopRegionSync.h  ModelMarketplace.cpp  ModelMarketplace.h  OnnxEngine.cpp  OnnxEngine.h  PatternEngine.cpp  PatternEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowserComponent.cpp  PresetBrowserComponent.h  PresetPackManager.cpp  PresetPackManager.h  TimelineLane.cpp  TimelineLane.h  UndoHistoryComponent.cpp  (+2 more)
scripts/: convert_pth_to_onnx.py  export_onnx_models.py  generate_song_sample.py  generate_text_to_vocal_samples.py  requirements.txt
